Optimisations de performance et corrections de bugs
Performances (sortie JSON identique octet par octet à la version précédente) :
- suppression des verrous globaux : ConcurrentHashMap pour les tables
  d'actions, les champs par type (TypeExtension), Fabrique et ChampUid
- parseur JSON : StringBuilder au lieu d'ArrayList<Character>, lecture par
  blocs, nettoyage des blancs en une passe (comportement inchangé)
- échappement texte par table indexée et écriture par tronçons
- faux ids via ThreadLocalRandom au lieu de SecureRandom
- caches par classe : détection Hibernate, constantes d'enum, Class.forName,
  listes de champs ; parseur SAX réutilisé par thread ; formats de date clonés
- en-têtes binaires en tableaux, entiers encodés sans BigInteger
- valeurs JSON simples écrites sans allouer de Comportement

Mesures (graphe de ~10 000 objets) : JSON -45 % en écriture, -40 % en
lecture ; XML -40 % / -14 % ; JSON sur 8 threads 5,5x plus rapide.

Corrections :
- binaire : plantage à l'initialisation des Header, UUID corrompus, entrées
  de Map jamais insérées, char en ClassCastException, LinkedHashMap et
  collections concurrentes reconstruites avec la mauvaise classe
- enums non publics et enums à corps en échec dans tous les formats
- Fabrique non thread-safe
- objets égaux au sens de equals() fusionnés : comparaison par identité
- JSON : valeurs de Map typées comme la clé, valeurs simples enveloppées
  perdues, Character non pris en charge
- XML : passage en XML 1.1 pour transporter \r et les caractères de
  contrôle, suppression du double décodage qui corrompait "&lt;",
  attribut id échappé, Character pris en charge

Ajout de tests aller-retour JUnit 5 (JSON, XML, binaire, multi-thread).